# pygame-hotreloader

./: .gitignore  LICENSE  MANIFEST.in  README.md  include_lib_paths.py  linux_package_managers.json  linux_pkgm_detection.py  package_install.py  pyproject.toml  requirements.txt  setup.py
_hotreload/include/: _hotreload.h
_hotreload/src/: _hotreload.c
c_extensions/src/: hot_reload.c
pygame_hotreloader/: file_changes.py  hotreload.py  pygame_hotreloader.py
pygame_hotreloader/c_extensions/src/: Makefile  hot_reload.c
scripts/: __main__.py  create_cmake_file.py  include_intellisense.py  include_lib_paths.py
src/pygame_hotreloader/: file_changes.py  hotreload_visual.py
tests/: base_loop.py  base_loop_function.py
