[tool.poetry]
name = "pygame-hotreloader"
version = "0.0.1"
description = "A hotreloader for Pygame"
authors = ["ram <ramzey.burdette2005@gmail.com>"]
readme = "README.md"
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
watchdog = "^5.0.3"

[tool.poetry.dev-dependencies]
mypy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
