[build-system]
requires = [
    "setuptools",
    "wheel"
]

build-backend = "setuptools.build_meta"

[project]
name="pygame_hotreloader"
version="0.0.1"
description="A hotreloader for Pygame."
readme="README.md"
license ={ file = "LICENSE" }
authors = [
    { name = "ram", email = "ramzey.burdette2005@gmail.com" }
]
# homepage = "https://github.com/foxwithahdie/pygame-hotreloader"
dependencies = [
    "watchdog",
    "pygame"
]
requires-python = ">= 3.9"

[project.optional-dependencies]
dev = ["mypy"]

[tool.setuptools]

# ext-modules = [
#     { name = "pygame_hotreloader.c_extensions.c_extension", sources = ["c_extensions/src/hot_reload.c"], include_dirs = ["c_extensions/include"], py-limited-api = true }
# ]